--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,16 @@
 language: node_js
 node_js:
-  - "lts/*"
-  - "node"
+  - '12'
 env:
-  -
+  - 
   - BROWSER=1
   - BROWSER=1 NOCOMPRESS=1
+
+before_install:
+  - |
+    mkdir node_modules
+    tar -xvzf gear.tar.gz -C node_modules
+
 script:
   - |
     export BUILD_PARAMS=""
